[package]
name = "image-upload"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.3"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
futures = "0.1.28"
actix-multipart = "0.1.2"
image = "0.21.2"
failure = "0.1.5"
serde = { version = "1.0.94", features = ["derive"] }
enum-primitive-derive = "0.1"
num-traits = "0.1"
dotenv = "0.14.1"
env_logger = "0.6.2"
log = "0.4.7"
base64 = "0.10.1"

[dev-dependencies]
serde_json = "1.0.40"
mockito = "0.18.0"
